--- a/lesson/src/templates/index.pug
+++ b/lesson/src/templates/index.pug
@@ -79,9 +79,66 @@ block body
 								.product-box
 							.col-md-4.item
 								.product-box
+			
+		.lesson#lesson-4
+			//- .container
+			//- 	.counter-module
+			//- 		.item(data-count='200') 0
+			//- 		.item(data-count='400') 0
+			//- 		.item(data-count='600') 0
 			.container
-				.counter-module
-					.item(data-count='200') 0
-					.item(data-count='400') 0
-					.item(data-count='600') 0
-
+				.counter-module-2
+					.row
+						.col-md-4.left-col
+							.outter-box
+								.box
+									h4.title 
+										i.fa.fa-firefox
+										br
+										span Talent
+									h3.lesson-4-counter 
+										span + 
+										span.number(count='200') 0
+									p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla natus
+								.box
+									
+									h4.title 
+										i.fa.fa-firefox
+										br
+										span Talent
+									h3.lesson-4-counter 
+										span + 
+										span.number(count='400') 0
+									p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla natus
+						.col-md-4.center-col
+							.outter-box
+								.box
+									h4.title
+										i.fa.fa-firefox
+										br
+										span Talent
+									h3.lesson-4-counter 
+										span + 
+										span.number(count='800') 0
+									p Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo harum beatae aliquid eveniet nisi inventore eos dicta blanditiis, recusandae sunt aut deserunt quod animi autem quae officia consequatur laborum est?
+						.col-md-4.right-col
+							.outter-box
+								.box
+									h4.title
+										i.fa.fa-firefox
+										br
+										span Talent
+									h3.lesson-4-counter 
+										span + 
+										span.number(count='600') 0
+									p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla natus
+									p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla natus
+								.box
+									h4.title
+										i.fa.fa-firefox
+										br
+										span Talent
+									h3.lesson-4-counter 
+										span + 
+										span.number(count='500') 0
+									p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla natus
