--- a/lesson/src/styles/_pages/index.sass
+++ b/lesson/src/styles/_pages/index.sass
@@ -13,7 +13,7 @@ ul
 		margin: 50px 0
 		padding: 20px
 		.title
-			text-decoration: underline
+			// text-decoration: underline
 			text-align: center
 		.desc
 			text-align: center
@@ -196,3 +196,23 @@ ul
 						border-bottom: 1px green solid
 						.product-box
 							height: 300px
+
+#lesson-4
+	.counter-module-2
+		.row
+			[class*='col-']
+				display: flex
+				justify-content: center
+				align-items: center
+			.outter-box
+				.box
+					border: 0
+					border-radius: 10px
+					background: #80c34f
+					color: white
+					padding: 10px
+					margin: 10px
+					.title
+						text-align: center
+					.lesson-4-counter
+						text-align: center
